# set_your_lineup_reminder

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
set_your_lineup_reminder/: __init__.py  cli.py  set_your_lineup_reminder.py
tests/: __init__.py  test_set_your_lineup_reminder.py
