[tool.poetry]
name = "set_your_lineup_reminder"
version = "0.0.1"
description = ""
authors = ["Randy Akerman"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
